added readme and finished website

--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
 
 <body>
     <header>
-        <div class="logo">
+        <!-- <div class="logo">
             <img src="img/devjane.png">
-        </div>
+        </div> -->
         <button class="nav-toggle" aria-lable="toggle navigation">
             <span class="hamburger"></span>
         </button>
@@ -35,13 +35,15 @@
 
     <!--Introduction-->
     <!--__signifies subsection, -- = modifier class-->
+    <!-- ADD CONTACT ME -->
 
     <section class="intro" id="home">
         <h1 class="section__title section__title--intro">
             Hello, I am <strong>Gianmarco Folchi</strong>
         </h1>
         <p class="section__subtitle section__subtitle--intro">Software Developer</p>
-        <img src="img/dev-jane-01.jpg" alt="profile" class="intro__img">
+        <img src="img/8EE11AB2-5C99-4C44-AFA8-E2D339B673D4.jpg" alt="profile" class="intro__img">
+        <!-- <img src="img/hero.svg" alt="purple computer" class="portfolio__decoration-img"> -->
     </section>
 
     <!-- About me -->
@@ -50,101 +52,117 @@
         <p class="section__subtitle section__subtitle--about">Computer Science Student</p>
 
         <div class="about-me__body">
-            <p>Lorem ipsum dolor sit amet, consectetur Lorem ipsum dolor sit amet, consectetur adipisicing elit. Velit
-                vitae inventore dicta enim iste accusantium cupiditate nesciunt cumque, asperiores eius! Ipsum saepe
-                soluta, sint dolor, optio doloribus odio sit commodi quos eius nemo sapiente nostrum at sunt quaerat!
-                Alias eum at, minima quis reiciendis, porro id incidunt fuga deleniti delectus recusandae illum est
-                quasi assumenda consequatur, magni nam temporibus veritatis possimus soluta officia pariatur aspernatur!
-                Minus, saepe dolor facere deleniti esse eaque architecto labore vitae, fuga pariatur sit ratione
-                ab.adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
-                veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-            <p>Lorem ipsum dolor sit amet, consec Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto
-                fugiat debitis asperiores porro molestias. Fugit perspiciatis numquam eius, eaque nemo distinctio unde
-                officia tenetur rem harum minus quia voluptate hic at fuga recusandae error? Libero quia deleniti cum
-                molestiae reiciendis quam doloribus ea voluptates, aliquam, ex suscipit quibusdam veniam? Perferendis,
-                consectetur. Magnam, saepe. Molestiae aperiam ea temporibus dicta corporis rem hic sapiente voluptatum
-                magnam magni praesentium quasi sint similique officiis, officia ratione. Voluptatem nam ducimus error
-                perspiciatis animi rerum fugit. tetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-                dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
-                ex ea commodo consequat.</p>
+            <!--  When finished writing this, adjust the media of this section so that it looks best-->
+            <p>
+                Hello! My name is Gianmarco Folchi and I am Junior at the University of Central Florida persuing a
+                degree in Computer Science. I was born in Venezuela, but immigrated to the United States when I was
+                eleven years old. I am seeking to obtain a full-time internship in the technology industry to
+                demonstrate my passion for Software Engineering in a team environment while gaining in-depth knowledge
+                of the field.
+            </p>
+            <p>
+                In 2020, I became a certified App Developer with Swift which led to my hiring by STIR Labs where I am
+                currently working as an iOS developer. I have led a development team of four in creating and testing iOS
+                apps
+                to be used in research studies. I attribute this experience to my leadership skills and my ability to
+                work in a collaborative team environment.
+            </p>
+            <p>
+                My passion for learning and building new software has led me to learn Java, Python, Swift, C, and
+                JavaScript. Below is a sample of projects I have completed!
+            </p>
         </div>
 
-        <img src="img/dev-jane-02.jpg" alt="Jane leaning against a bus" class="about-me__img">
+        <img src="img/205de484-a51d-4e88-8165-342fc0e36564.jpg" alt="Jane leaning against a bus" class="about-me__img">
     </section>
 
 
     <!-- My Services-->
-    <!-- <section class="my-services" id="services">
+    <section class="my-services" id="services">
         <h2 class="section__title section__title--services">What I do</h2>
         <div class=services>
             <div class="service">
-                <h3>Design + Development</h3>
+                <h3>Improvement & Learning</h3>
+                <p class="section--paragraph">
+                    As a Computer Scientist, I believe in life long learning. I am constantly absorbing new languages
+                    and technologies
+                    that I believe will help me become a valuable team member in an organization. I started my
+                    programming journey
+                    with Swift and Xcode and have since grasped Java and C for University courses. I am now focused on
+                    full-stack web development as I aspire to become a skilled and professional developer.
+                </p>
+            </div>
+
+            <!-- <div class="service">
+                <h3>Experience</h3>
                 <p class="section--paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit,
                     sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
                     veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-            </div>
+            </div> -->
 
-            <div class="service">
-                <h3>E-Commerce</h3>
-                <p class="section--paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-                    sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
-                    veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-            </div>
-
-            <div class="service">
+            <!-- <div class="service">
                 <h3>WordPress</h3>
                 <p class="section--paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit,
                     sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
                     veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-            </div>
+            </div> -->
         </div>
         <a href="#work" class="btn">My Work</a>
-    </section> -->
+    </section>
+
+    <hr class="rounded">
 
     <!-- My Work -->
 
     <section class="my-work" id="work">
         <h2 class="section__title">My work</h2>
-        <p class="section__subtitle section__subtitle--work">A selection of my range of work</p>
+        <p class="section__subtitle section__subtitle--work">A Selection of My Range of Work</p>
 
         <div class="portfolio">
             <!-- Portfolio item 01 -->
-            <a href="#">
-                <img src="img/portfolio-01.jpg" alt="" class="portfolio__img">
+            <a href="Portfolio-Items/portfolio-NBA-APP.html">
+                <img src="img/AppIcon~ios-marketing.png" alt="" class="portfolio__img">
             </a>
 
             <!-- Portfolio item 02 -->
-            <a href="#">
-                <img src="img/portfolio-02.jpg" alt="" class="portfolio__img">
+            <a href="Portfolio-Items/portfolio-Carebit-APP.html">
+                <img src="img/Carebit-Pic.png" alt="" class="portfolio__img">
             </a>
 
             <!-- Portfolio item 03 -->
-            <a href="#">
-                <img src="img/portfolio-03.jpg" alt="" class="portfolio__img">
+            <a href="Portfolio-Items/portfolio-Diary-Study-APP.html">
+                <img src="img/Diary-Study-Pic.png" alt="" class="portfolio__img">
             </a>
 
-            <img src="img/hero.svg" alt="purple computer" class="portfolio__decoration-img">
+            <!-- Portfolio item 04 -->
+            <a href="Portfolio-Items/portfolio-Reunite-APP.html">
+                <img src="img/Reunite-Logo.png" alt="" class="portfolio__img">
+            </a>
+            <!-- <img src="img/hero.svg" alt="purple computer" class="portfolio__decoration-img"> -->
         </div>
     </section>
 
     <!-- Footer -->
     <footer class="footer">
-        <!-- replace with your own email address -->
-        <a href="mailto:hello@jane.dev" class="footer__link">hello@jane.dev</a>
+        <h2>Contact Me</h2>
+        <br>
+        <a href="mailto:gmfolc@gmail.com" class="footer__link">gmfolc@gmail.com</a>
+        <br>
+        <a href="Resume.pdf" class="footer__link" download>Download my Resume</a>   
+        <br>
+        <h3>786-925-0912</h3>
         <ul class="social-list">
             <li class="social-list__item">
                 <a class="social-list__link" href="https://www.linkedin.com/in/gianmarco-folchi-2103b81a7/"></a>
-                <i class="fab fa-linkedin"></i>
+                <i class="fab fa-linkedin-in"></i>
             </li>
             <li class="social-list__item">
                 <a class="social-list__link" href="https://github.com/GianmarcoFolchi"></a>
-                <i class="fab fa-github-square"></i>
+                <i class="fab fa-github"></i>
             </li>
             <li class="social-list__item">
-                <a class="social-list__link" href="https://twitter.com">c</a>
-            </li>
-            <li class="social-list__item">
-                <a class="social-list__link" href="https://github.com/GianmarcoFolchi">Github</a>
+                <a class="social-list__link" href="https://www.instagram.com/gianma2002/"></a>
+                <i class="fab fa-instagram"></i>
             </li>
         </ul>
     </footer>
