updated website with new info and deleted old section

--- a/Portfolio-Items/portfolio-Diary-Study-APP.html
+++ b/Portfolio-Items/portfolio-Diary-Study-APP.html
@@ -39,7 +39,7 @@
         <h1 class="section__title section__title--intro">
             Diary Study <strong>App</strong>
         </h1>
-        <p class="section__subtitle section__subtitle--intro">iOS App</p>
+        <p class="section__subtitle section__subtitle--intro">iOS</p>
         <img src="../img/Diary-Study-Pic.png" alt="profile" class="intro__img">
     </section>
 
