--- a/Portfolio-Items/portfolio-NBA-APP.html
+++ b/Portfolio-Items/portfolio-NBA-APP.html
@@ -37,15 +37,15 @@
 
     <section class="intro">
         <h1 class="section__title section__title--intro">
-            Guess the NBA Player <strong>App</strong>
+            Match the Stats <strong>App</strong>
         </h1>
-        <p class="section__subtitle section__subtitle--intro">iOS App</p>
+        <p class="section__subtitle section__subtitle--intro">iOS</p>
         <img src="../img/AppIcon~ios-marketing.png" alt="profile" class="intro__img">
     </section>
 
     <div class="portfolio-item-individual">
-        <p class="description-text">I am the sole developer of The Guess the NBA Player app. The premise of the app is
-            to guess the NBA player given their stats. This app is built using Swift and Xcode with the SwiftUI
+        <p class="description-text">I am the sole developer of the Match the Stats app. The premise of the app is
+            to guess the NBA player given their stats. This app is built using Swift and Xcode using the SwiftUI
             framework for the frontend. The backend is built on the "balldontlie" API and a Python script to scrape NBA
             player names. Creating this project enhanced my app development skills while I learned to work with JSON and
             adapted to the SwiftUI framework.
