--- a/Portfolio-Items/portfolio-Reunite-APP.html
+++ b/Portfolio-Items/portfolio-Reunite-APP.html
@@ -36,9 +36,9 @@
 
     <section class="intro">
         <h1 class="section__title section__title--intro">
-            Diary Study <strong>App</strong>
+            Reunite <strong>App</strong>
         </h1>
-        <p class="section__subtitle section__subtitle--intro">iOS App</p>
+        <p class="section__subtitle section__subtitle--intro">React Native</p>
         <img src="../img/Reunite-Logo.png" alt="profile" class="intro__img">
     </section>
 
