--- a/index.html
+++ b/index.html
@@ -17,16 +17,13 @@
 
 <body>
     <header>
-        <!-- <div class="logo">
-            <img src="img/devjane.png">
-        </div> -->
         <button class="nav-toggle" aria-lable="toggle navigation">
             <span class="hamburger"></span>
         </button>
         <nav class="nav">
             <ul class="nav__list">
                 <li class="nav__item"><a href="#home" class="nav__link">Home</a> </li>
-                <li class="nav__item"><a href="#services" class="nav__link">My Services</a> </li>
+                <!-- <li class="nav__item"><a href="#services" class="nav__link">My Services</a> </li> -->
                 <li class="nav__item"><a href="#about" class="nav__link">About me</a> </li>
                 <li class="nav__item"><a href="#work" class="nav__link">My Work</a> </li>
             </ul>
@@ -56,29 +53,30 @@
             <p>
                 Hello! My name is Gianmarco Folchi and I am Junior at the University of Central Florida persuing a
                 degree in Computer Science. I was born in Venezuela, but immigrated to the United States when I was
-                eleven years old. I am seeking to obtain a full-time internship in the technology industry to
-                demonstrate my passion for Software Engineering in a team environment while gaining in-depth knowledge
-                of the field.
+                eleven years old.
             </p>
             <p>
-                In 2020, I became a certified App Developer with Swift which led to my hiring by STIR Labs where I am
-                currently working as an iOS developer. I have led a development team of four in creating and testing iOS
-                apps
+                In 2020, I became a certified App Developer with Swift leading me to work as an iOS developer for the research organization
+                STIR Labs for two semesters. I led a development team of four in creating and testing iOS apps
                 to be used in research studies. I attribute this experience to my leadership skills and my ability to
                 work in a collaborative team environment.
             </p>
             <p>
-                My passion for learning and building new software has led me to learn Java, Python, Swift, C, and
-                JavaScript. Below is a sample of projects I have completed!
+                During the Summer of 2022 I was fortunate to intern with Amazon in the New York office. I developed a full-stack 
+                AWS application to add descriptions to all internal Amazon tickets saving on-call engineers 11 minutes of research on average. 
+                Additionally, I presented benefits of my application to senior management while sharing ideas for potential future additions.
+            </p>
+            <p>
+                My passion for learning and building new software has led me to learn countless frameworks and languages. Below is a sample of projects I have completed!
             </p>
         </div>
 
-        <img src="img/205de484-a51d-4e88-8165-342fc0e36564.jpg" alt="Jane leaning against a bus" class="about-me__img">
+        <img src="img/205de484-a51d-4e88-8165-342fc0e36564.jpg" alt="Gianmarco leaning against a fence" class="about-me__img">
     </section>
 
 
     <!-- My Services-->
-    <section class="my-services" id="services">
+    <!-- <section class="my-services" id="services">
         <h2 class="section__title section__title--services">What I do</h2>
         <div class=services>
             <div class="service">
@@ -91,7 +89,7 @@
                     with Swift and Xcode and have since grasped Java and C for University courses. I am now focused on
                     full-stack web development as I aspire to become a skilled and professional developer.
                 </p>
-            </div>
+            </div> -->
 
             <!-- <div class="service">
                 <h3>Experience</h3>
@@ -106,17 +104,17 @@
                     sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
                     veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
             </div> -->
-        </div>
-        <a href="#work" class="btn">My Work</a>
-    </section>
+        <!-- </div> -->
+        <!-- <a href="#work" class="btn">My Work</a> -->
+    <!-- </section> -->
 
-    <hr class="rounded">
+    <!-- <hr class="rounded"> -->
 
     <!-- My Work -->
 
     <section class="my-work" id="work">
-        <h2 class="section__title">My work</h2>
-        <p class="section__subtitle section__subtitle--work">A Selection of My Range of Work</p>
+        <h2 class="section__title">My Work</h2>
+        <p class="section__subtitle section__subtitle--work">A Selection of My Work</p>
 
         <div class="portfolio">
             <!-- Portfolio item 01 -->
@@ -148,7 +146,7 @@
         <br>
         <a href="mailto:gmfolc@gmail.com" class="footer__link">gmfolc@gmail.com</a>
         <br>
-        <a href="Resume.pdf" class="footer__link" download>Download my Resume</a>   
+        <a href="Portfolio-Items/Resume.pdf" class="footer__link" download>Download my Resume</a>   
         <br>
         <h3>786-925-0912</h3>
         <ul class="social-list">
