--- a/Portfolio-Items/portfolio-Carebit-APP.html
+++ b/Portfolio-Items/portfolio-Carebit-APP.html
@@ -38,7 +38,7 @@
         <h1 class="section__title section__title--intro">
             Carebit <strong>App</strong>
         </h1>
-        <p class="section__subtitle section__subtitle--intro">iOS App</p>
+        <p class="section__subtitle section__subtitle--intro">iOS</p>
         <img src="../img/Carebit-Pic.png" alt="profile" class="intro__img">
     </section>
 
